src/styles/index.scss
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

/************variables***********/
$black: #000;
$white: #fff;
$gray-light: #f6f6f6;
$red: #ff6060;
$filter: rgba(0, 0, 0, 0.5);
$shadow: rgba(0, 0, 0, 0.3);

/***************mixins**********************/

@mixin flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

@mixin flex-space-between {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

@mixin border-radius($radius: 30px) {
  border-radius: $radius;
}

@mixin banner-filter-position {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 230px;
  z-index: 2;
  @include border-radius;
}

// si besoin de colorer les côtés du carrousel, activer le background-color
@mixin carrousel_sides {
  @include flex-center;
  width: 100px;
  height: 414px;
  position: absolute;
  // background-color: rgba(0, 0, 0, 0.1);
  z-index: 2;
  top: 173px;
}
/************************************************************************************/
/************************************************************************************/
/************************************************************************************/

body {
  box-sizing: border-box;
  margin: 0 100px;
  font-family: "Montserrat", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
}

ul {
  padding: 0;
}

.no_list_style {
  list-style: none;
}
/****************************************Page Home*************************************/
.Header {
  padding: 40px 0;
  @include flex-space-between;
  width: auto;
  &__logo {
    width: 225px;
  }
  &__links {
    @include flex-center;
    font-size: 24px;
    font-weight: 500;
    gap: 75px;
    & a {
      color: $black;
      text-decoration: none;
    }
    & a:hover {
      text-decoration: underline;
    }
  }
}

.Banner {
  @include flex-center;
  color: $white;
  margin: 10px 0;
  @include border-radius;
  width: 100%;
  height: 230px;
  position: relative;
  z-index: 1;
  &__homeFilter {
    @include banner-filter-position;
    background: $filter;
    filter: drop-shadow(0px 5px 0.2rem rgba(0, 0, 0, 0.459));
  }
  &__aboutFilter {
    @include banner-filter-position;
    background: $shadow;
  }

  &__text {
    position: absolute;
    font-size: 48px;
    font-weight: 700;
    // -webkit-text-stroke: 1px $black; pour contour noir mais ne fonctionne pas avec la police Monserrat
    text-shadow: 3px 3px 5px $black;
    z-index: 2;
  }
  & img {
    @include border-radius;
    width: 100%;
    height: 230px;
    object-fit: cover;
    position: relative;
    z-index: 1;
  }
}

/*******Cards***********/
.Card {
  display: flex;
  list-style: none;
  width: 360px;
  height: 360px;
  @include border-radius(20px);
  filter: drop-shadow(0px 3px 5px $shadow);
  &__wrapper {
    display: flex;
    width: fit-content;
    margin: 40px 0;
    margin-bottom: 50px;
    justify-content: space-evenly;
    background-color: $gray-light;
    @include border-radius(20px);
    gap: 59px;
    padding: 59px;
    flex-wrap: wrap;
  }
  & img {
    object-fit: cover;
    position: relative;
    width: 100%;
    height: 100%;
    z-index: 1;
    border-radius: 15px;
    backdrop-filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.603));
  }
  &__gradient {
    position: absolute;
    top: 0;
    left: 0;
    width: 360px;
    height: 360px;
    @include border-radius(15px);
    background: linear-gradient(180deg, rgba(255, 255, 255, 0), $filter);
    z-index: 2;
  }
  &__title {
    position: absolute;
    z-index: 3;
    top: 300px;
    left: 20px;
    right: 20px;
    color: $white;
    font-weight: 500;
    font-size: 18px;
  }
}

.Footer {
  @include flex-center;
  flex-direction: column;
  background-color: $black;
  color: $white;
  padding: 18px 0 8px 0;
  & img {
    padding-top: 50px;
    width: 8vw;
  }
  & p {
    margin-top: 40px;
    font-size: 24px;
  }
}

/***********************************Page About (à propos)************************************/
.About__container {
  margin: 30px 0;
  display: flex;
  flex-direction: column;
  gap: 13px;
}

.Collapse {
  position: relative;
  z-index: 2;
  background-color: $red;
  width: 100%;
  color: $white;
  font-size: 24px;
  font-weight: 700;
  @include flex-space-between;
  border-radius: 5px;
  margin: 10px;
  cursor: pointer;
  &__container {
    display: flex;
    width: 100%;
    margin-bottom: 40px;
    gap: 80px;
    & > .Collapse {
      flex: 1;
    }
  }
  &__wrapper {
    display: flex;
    align-items: center;
    flex-direction: column;
    max-width: 85%;
    margin: 0 auto;
    flex: 1 1;
  }
  &__content {
    width: 96%;
    list-style: none;
    position: relative;
    top: -50px;
    overflow: hidden;
    height: 0;
    transition: height 0.4s ease, transform 0.4s ease;
    transform: translateY(0px);
  }
  &__content {
    &.open {
      position: relative;
      z-index: 1;
      margin-bottom: 10px;
      transform: translateY(50px);
      transition: height 0.4s ease, transform 0.4s ease;
    }
  }
  &__content--inner {
    padding: 5px 0;
    text-align: left;
    width: 100%;
    & ul {
      list-style: none;
      margin: 0;
      padding-left: 0;
    }
  }
  & div,
  & img {
    padding: 10px 15px;
  }
}

.Arrow {
  transition: transform 0.3s ease;
  transform: rotate(0deg);
  &.open {
    transform: rotate(-180deg);
  }
}

/*************************************Page Logement***************************************/
.SlideShow {
  padding-top: 20px;
  width: 100%;
  overflow: hidden;
  &__anim {
    display: flex;
    width: 100%;
  }
  &__pics {
    min-width: 100%;
    height: 415px;
    object-fit: cover;
    @include border-radius;
    position: relative;
    z-index: 1;
  }
}

.carrousel {
  @include flex-center;
  &__right {
    @include carrousel-sides;
    @include border-radius(0 30px 30px 0);
    right: 100px;
  }
  &__left {
    @include carrousel-sides;
    @include border-radius(30px 0 0 30px);
    left: 100px;
  }
  &__arrows {
    cursor: pointer;
  }
}

.imageCount {
  position: absolute;
  top: 545px;
  left: 50%;
  transform: translateX(-50%);
  color: $white;
  font-size: 16px;
  font-weight: 500;
  background-color: rgba(0, 0, 0, 0.1);
  padding: 5px 10px;
  @include border-radius(5px);
  z-index: 2;
  &__center {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
  }
}

/**********Détails location********/
.location {
  &__container {
    display: flex;
    justify-content: space-between;
  }
  &__title {
    color: $red;
    font-size: 36px;
    margin-bottom: 0;
    font-weight: 500;
  }
  &__taglist {
    display: flex;
    gap: 10px;
    & li {
      background-color: $red;
      color: $white;
      font-weight: 600;
      text-align: center;
      padding: 5px 20px;
      min-width: 85px;
      @include border-radius(20px);
    }
  }
  & p {
    margin-top: 5px;
    font-size: 18px;
    font-weight: 500;
  }
}

/********Détails propriétaire**********/
.owner {
  display: flex;
  flex-direction: column;
  justify-content: center;
  max-width: 230px;
  color: $red;
  &__profile {
    @include flex-center;
  }
  &__stars {
    padding-left: 18px;
  }
  & p {
    display: flex;
    justify-content: right;
    & span {
      font-size: 1.3em;
      text-align: right;
      max-width: 100px;
      line-height: 1.5;
      font-weight: 500;
      margin-right: 5px;
    }
  }
  &__pic {
    margin-left: 10px;
    height: 80px;
    width: 80px;
    object-fit: cover;
    @include border-radius(40px);
    // clip-path: circle(50%)
  }
}

/*****************************************Page Error404**************************************/
.Error404 {
  color: $red;
  @include flex-center;
  flex-direction: column;
  & h1 {
    font-size: 19em;
    margin: 0.2em;
  }
  & h2 {
    font-size: 36px;
    font-weight: 500;
    margin-bottom: 200px;
    margin-top: 47px;
    text-align: center;
  }
  &__link {
    color: $black;
    font-size: 18px;
    font-weight: 500;
    margin-bottom: 100px;
  }
}

/******************************************************************************************/
/*******************************************RESPONSIVE*************************************/
/******************************************************************************************/
@media (max-width: 768px) {
  body {
    margin: 20px 30px;
  }
  /*********Page Home*********/
  .Header {
    padding: 10px 0;
    margin-bottom: 30px;
    &__logo {
      width: 35vw;
    }

    &__links {
      text-transform: uppercase;
      font-size: 1.4em;
      gap: 60px;
      margin-left: 15px;
    }
  }

  .Banner {
    justify-content: flex-start;
    height: 160px;
    &__text {
      margin: 0 20px;
      font-size: 34px;
      width: 330px;
    }
    &__homeFilter {
      height: 160px;
    }
    &__aboutFilter {
      height: 160px;
    }
    & img {
      height: 160px;
    }
  }

  .Card {
    width: 100%;
    height: 350px;
    &__wrapper {
      background-color: $white;
      width: 100%;
      padding: 0;
      gap: 25px;
    }
    &__gradient {
      width: 100%;
      height: 100%;
    }
    & a {
      width: 100%;
    }
    &__title {
      top: 275px;
      font-size: 26px;
    }
  }
  .Footer {
    & img {
      width: 25vw;
    }
    & p {
      margin-top: 20px;
      font-size: 20px;
      width: 190px;
      text-align: center;
      padding-bottom: 50px;
    }
  }

  /*********Page About (à propos)*********/

  .Collapse {
    border-radius: 10px;
    &__container {
      flex-direction: column;
      gap: 20px;
      margin-top: 10px;
    }
    &__wrapper {
      max-width: 100%;
    }
    &__content--inner {
      font-size: 20px;
    }
  }

  /*********Page Error404*********/
  .Error404 {
    & h1 {
      font-size: 8.5em;
      margin: 1em;
    }
    & h2 {
      display: inline;
      font-size: 24px;
      text-align: center;
      // width: 300px;
    }
    &__link {
      margin-bottom: 150px;
      font-size: 20px;
    }
    &__span {
      display: block;
    }
  }

  /*********Page Logement*********/
  .SlideShow__pics {
    height: 520px;
  }
  .carrousel {
    &__right {
      right: 30px;
      height: 520px;
      top: 169px;
    }
    &__left {
      left: 30px;
      height: 520px;
      top: 169px;
    }
  }

  .carrousel__arrows {
    width: 25%;
  }

  .imageCount {
    top: 640px;
    font-size: 18px;
  }
  .location {
    &__details p {
      font-size: 24px;
      font-weight: 600;
    }
    &__container {
      flex-direction: column;
    }
    &__taglist {
      flex-wrap: wrap;
      & li {
        font-size: 1.3em;
        border-radius: 10px;
      }
    }
  }

  .owner {
    flex-direction: row-reverse;
    max-width: 100%;
    justify-content: space-between;
    &__stars {
      padding-left: 13px;
      width: 30px;
      height: 30px;
    }
    & p {
      display: flex;
      align-items: center;
      margin: 0;
      & span {
        font-size: 1.5em;
      }
    }
  }

  .Collapse__wrapper {
    margin: 0;
  }
}

